Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15303

Regression Firefox 28 does not longer show the checkmarks in the menubar

    XMLWordPrintable

Details

    • 0.4.10-dev-466-35f62fc5ba0b69e7335ff41400cb3b45660f4557

    Description

      0.4.10-RC-30-g51a70dc gcc dbg is affected
      Firefox 28 from rapps
      does not longer show the checkmarks in menubar (e.g. for bookmark bar).
      0.4.10-RC-30-g51a70dc_FF28_noCheckmarkInMenubar_forBookmarksBar.png

      I verified that it's a regression, 0.4.10-dev-357-g2158f31 did still show the checkmarks!
      0.4.10-dev-357-g2158f31__wasStillOk.png
      (and we did not ship this regression until now, it happened during 0.4.10deving)
      We must hunt the guilty rev!
      0.4.10-RC-30-g51a70dc.log is no help.

      For comparison:
      2k3-correct.png 2k3 and XPSP3 do both look fine.

      Attachments

        1. 0.4.10-dev-357-g2158f31__wasStillOk.png
          0.4.10-dev-357-g2158f31__wasStillOk.png
          55 kB
        2. 0.4.10-RC-30-g51a70dc__FF28__noCheckmarkInMenubar_forBookmarksBar.png
          0.4.10-RC-30-g51a70dc__FF28__noCheckmarkInMenubar_forBookmarksBar.png
          64 kB
        3. 0.4.10-RC-30-g51a70dc.log
          35 kB
        4. 0.4.11-RC-29-g97ab52a__affected.png
          0.4.11-RC-29-g97ab52a__affected.png
          49 kB
        5. 0.4.11-RC-29-g97ab52a__xpMarlett.png
          0.4.11-RC-29-g97ab52a__xpMarlett.png
          60 kB
        6. 0.4.12-RC-16-ge1ac9dc__ok.png
          0.4.12-RC-16-ge1ac9dc__ok.png
          49 kB
        7. 0.4.13-dev-700-gf9b494e_veryGood.png
          0.4.13-dev-700-gf9b494e_veryGood.png
          50 kB
        8. 2k3-correct.png
          2k3-correct.png
          29 kB
        9. bug-confirmed.png
          bug-confirmed.png
          48 kB
        10. confirm-fixed-19fc941.png
          confirm-fixed-19fc941.png
          62 kB
        11. CORE-15303__RegressionTest.txt
          0.4 kB
        12. Debug_Marlett.txt
          4 kB
        13. ff28_menu_check_fix_draw_c.patch
          0.5 kB
        14. firefox-api-monitor.png
          firefox-api-monitor.png
          80 kB
        15. font-size.patch
          0.6 kB
        16. freetype_c_ff28_Fix.patch
          0.6 kB
        17. IntRequestFontSize_Debug.txt
          5 kB
        18. marlett-13-confirmed.png
          marlett-13-confirmed.png
          38 kB
        19. patch_failed.png
          patch_failed.png
          97 kB
        20. strange-phenomenon.png
          strange-phenomenon.png
          21 kB
        21. VirtualBox_ReactOS_03_12_2018_11_47_11.png
          VirtualBox_ReactOS_03_12_2018_11_47_11.png
          47 kB

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              reactosfanboy reactosfanboy
              Votes:
              3 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: