[WIN32SS][NTGDI] FireFox checkmark fix CORE-15303 (#1535)

The font size was a bit larger than expected. FireFox will show checkmarks correctly in View menu. CORE-15303